tests/negative/test_promo_null_macro.orb
eval (sym m:(mac 0));

fnc main () () {
    sym (p m);
};